--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "homepage": "https://github.com/hardikp24/Codegurukul_practise#readme",
   "dependencies": {
+    "body-parser": "^1.13.1",
     "express": "^4.13.0",
     "grunt": "^0.4.5",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "mongoose": "^4.0.6"
   }
 }
